--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "node src/scripts/test_api.js",
-    "test:api": "node src/scripts/test_api.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "express",
@@ -21,7 +20,6 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
